2003-11-24  Michael Natterer  <mitch@gimp.org>
	* POTFILES.in: added app/widgets/gimpcolordisplayeditor.c

	* *.po: ran "make update-po" so all existing (but commented out)
	translations for the display filter dialog get merged back.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11600 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-24  Michael Natterer  <mitch@gimp.org>
+
+	* POTFILES.in: added app/widgets/gimpcolordisplayeditor.c
+
+	* *.po: ran "make update-po" so all existing (but commented out)
+	translations for the display filter dialog get merged back.
+
 2003-11-24  Marco Ciampa  <ciampix@libero.it>
 
 	*  it.po: Updated italian translation.
