--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.3.22\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-11-14 18:09+0100\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
@@ -3165,7 +3165,7 @@ msgstr ""
 "\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 msgid "Determine File _Type:"
 msgstr "Da_teityp bestimmen:"
 
@@ -8771,6 +8771,47 @@ msgstr ""
 "%s  Abziehen\n"
 "%s%s%s  Schneiden"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+msgid "Available Filters"
+msgstr "Verfügbare Filter"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+msgid "Add the selected filter to the list of active filters."
+msgstr "Den gewählten Filter zur Liste aktiver Filter hinzufügen."
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+msgid "Remove the selected filter from the list of active filters."
+msgstr "Den gewählten Filter aus der Liste aktiver Filter entfernen."
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+msgid "Move the selected filter up"
+msgstr "Den gewählten Filter nach oben verschieben"
+
+#: app/widgets/gimpcolordisplayeditor.c:245
+msgid "Move the selected filter down"
+msgstr "Den gewählten Filter nach unten verschieben"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "Aktive Filter"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+msgid "Reset the selected filter to default values"
+msgstr "Den gewählten Filter auf Vorgabewerte zurücksetzen."
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "Den gewählten Filter konfigurieren: %s"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+msgid "No Filter Selected"
+msgstr "Kein Filter ausgewählt"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+msgid "Configure Selected Filter"
+msgstr "Den gewählten Filter konfigurieren"
+
 #: app/widgets/gimpcoloreditor.c:244
 msgid "FG"
 msgstr "FG"
@@ -9733,36 +9774,6 @@ msgstr "Bilder und Photos erstellen und bearbeiten"
 #: data/misc/gimp.desktop.in.in.h:2
 msgid "The GIMP (unstable)"
 msgstr "GIMP (instabil)"
-
-#~ msgid "Available Filters"
-#~ msgstr "Verfügbare Filter"
-
-#~ msgid "Add the selected filter to the list of active filters."
-#~ msgstr "Den gewählten Filter zur Liste aktiver Filter hinzufügen."
-
-#~ msgid "Remove the selected filter from the list of active filters."
-#~ msgstr "Den gewählten Filter aus der Liste aktiver Filter entfernen."
-
-#~ msgid "Move the selected filter up"
-#~ msgstr "Den gewählten Filter nach oben verschieben"
-
-#~ msgid "Move the selected filter down"
-#~ msgstr "Den gewählten Filter nach unten verschieben"
-
-#~ msgid "Active Filters"
-#~ msgstr "Aktive Filter"
-
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "Den gewählten Filter auf Vorgabewerte zurücksetzen."
-
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "Den gewählten Filter konfigurieren: %s"
-
-#~ msgid "No Filter Selected"
-#~ msgstr "Kein Filter ausgewählt"
-
-#~ msgid "Configure Selected Filter"
-#~ msgstr "Den gewählten Filter konfigurieren"
 
 #~ msgid "Error opening file '%s': %s"
 #~ msgstr "Datei »%s« konnte nicht geöffnet werden: %s"
