--- a/po/el.po
+++ b/po/el.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp 1.3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-08-12 15:55-0200\n"
 "Last-Translator: Nikos Charonitakis <charosn@her.fothnet.gr>\n"
 "Language-Team: Greek <nls@hellug.gr>\n"
@@ -3472,7 +3472,7 @@ msgstr ""
 "Αποτυχία επαναφοράς.\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 #, fuzzy
 msgid "Determine File _Type:"
 msgstr "Καθορισμός Τύπου Αρχείου:"
@@ -9929,6 +9929,56 @@ msgstr ""
 "Κανάλι προς Επιλογμένο. \n"
 "<Shift> Προσθήκη          <Ctrl> Αφαίρεση      <Shift><Ctrl> Τομή"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+#, fuzzy
+msgid "Available Filters"
+msgstr "Τύπος γεμίσματος"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+#, fuzzy
+msgid "Add the selected filter to the list of active filters."
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+#, fuzzy
+msgid "Remove the selected filter from the list of active filters."
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+#, fuzzy
+msgid "Move the selected filter up"
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
+#
+#: app/widgets/gimpcolordisplayeditor.c:245
+#, fuzzy
+msgid "Move the selected filter down"
+msgstr "Καθαρισμός επιλογής"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "Ενεργά Φίλτρα"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+#, fuzzy
+msgid "Reset the selected filter to default values"
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, fuzzy, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+#, fuzzy
+msgid "No Filter Selected"
+msgstr "Διαγραφή Επιλεγμένου"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+#, fuzzy
+msgid "Configure Selected Filter"
+msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
+
 #: app/widgets/gimpcoloreditor.c:244
 #, fuzzy
 msgid "FG"
@@ -11046,34 +11096,6 @@ msgstr "Το GIMP (ασταθές)"
 #, fuzzy
 #~ msgid "Error in GIMP pattern file '%s'."
 #~ msgstr "Σφάλμα ανάγνωσης αποθηκευμένου αρχείου κατάστασης: %s"
-
-#, fuzzy
-#~ msgid "Move the selected filter up"
-#~ msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
-
-#
-#, fuzzy
-#~ msgid "Move the selected filter down"
-#~ msgstr "Καθαρισμός επιλογής"
-
-#~ msgid "Active Filters"
-#~ msgstr "Ενεργά Φίλτρα"
-
-#, fuzzy
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
-
-#, fuzzy
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
-
-#, fuzzy
-#~ msgid "No Filter Selected"
-#~ msgstr "Διαγραφή Επιλεγμένου"
-
-#, fuzzy
-#~ msgid "Configure Selected Filter"
-#~ msgstr "Αφαίρεση της επιλεγμένης καταχώρησης από τον πίνακα"
 
 #, fuzzy
 #~ msgid "Current:"
