--- a/po/ja.po
+++ b/po/ja.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-09-08 23:00+0900\n"
 "Last-Translator: Ryoichi INAGAKI <ryo1@bc.wakwak.com>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
@@ -3236,7 +3236,7 @@ msgstr ""
 "\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 msgid "Determine File _Type:"
 msgstr "ファイル形式の決定(_T):"
 
@@ -9018,6 +9018,47 @@ msgstr ""
 "%s  から引く\n"
 "%s%s%s  との交わりをとる"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+msgid "Available Filters"
+msgstr "利用可能なフィルタ"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+msgid "Add the selected filter to the list of active filters."
+msgstr "選択したフィルタを利用可能なフィルタの一覧に追加する."
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+msgid "Remove the selected filter from the list of active filters."
+msgstr "洗濯したフィルタを利用可能なフィルタの一覧から削除する."
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+msgid "Move the selected filter up"
+msgstr "選択したフィルタを上に移動"
+
+#: app/widgets/gimpcolordisplayeditor.c:245
+msgid "Move the selected filter down"
+msgstr "選択したフィルタを下に移動"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "アクティブなフィルタ"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+msgid "Reset the selected filter to default values"
+msgstr "選択フィルタをデフォルトの値に初期化"
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "選択したフィルタの設定: %s"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+msgid "No Filter Selected"
+msgstr "フィルタが選択されていません"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+msgid "Configure Selected Filter"
+msgstr "選択したフィルタの設定"
+
 #: app/widgets/gimpcoloreditor.c:244
 msgid "FG"
 msgstr "描画色"
@@ -10050,36 +10091,6 @@ msgstr "GIMP (開発版)"
 
 #~ msgid "Error in GIMP pattern file '%s'."
 #~ msgstr "GIMP パターンファイル '%s' 中に問題があります."
-
-#~ msgid "Available Filters"
-#~ msgstr "利用可能なフィルタ"
-
-#~ msgid "Add the selected filter to the list of active filters."
-#~ msgstr "選択したフィルタを利用可能なフィルタの一覧に追加する."
-
-#~ msgid "Remove the selected filter from the list of active filters."
-#~ msgstr "洗濯したフィルタを利用可能なフィルタの一覧から削除する."
-
-#~ msgid "Move the selected filter up"
-#~ msgstr "選択したフィルタを上に移動"
-
-#~ msgid "Move the selected filter down"
-#~ msgstr "選択したフィルタを下に移動"
-
-#~ msgid "Active Filters"
-#~ msgstr "アクティブなフィルタ"
-
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "選択フィルタをデフォルトの値に初期化"
-
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "選択したフィルタの設定: %s"
-
-#~ msgid "No Filter Selected"
-#~ msgstr "フィルタが選択されていません"
-
-#~ msgid "Configure Selected Filter"
-#~ msgstr "選択したフィルタの設定"
 
 #~ msgid "Current:"
 #~ msgstr "現在の色:"
