--- a/po/pl.po
+++ b/po/pl.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-09-15 01:53+0200\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
@@ -3267,7 +3267,7 @@ msgstr ""
 "\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 msgid "Determine File _Type:"
 msgstr "Ustalenie _typu pliku:"
 
@@ -9044,6 +9044,47 @@ msgstr ""
 "%s  Odejmuje\n"
 "%s%s%s  Przecina"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+msgid "Available Filters"
+msgstr "Dostępne filtry"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+msgid "Add the selected filter to the list of active filters."
+msgstr "Dodaje zaznaczony filtr do listy aktywnych filtrów"
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+msgid "Remove the selected filter from the list of active filters."
+msgstr "Usuwa zaznaczony filtr z listy aktywnych filtrów"
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+msgid "Move the selected filter up"
+msgstr "Przesunięcie zaznaczonego filtru w górę"
+
+#: app/widgets/gimpcolordisplayeditor.c:245
+msgid "Move the selected filter down"
+msgstr "Przesunięcie zaznaczonego filtru w dół"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "Aktywne filtry"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+msgid "Reset the selected filter to default values"
+msgstr "Przywraca domyślne ustawienia zaznaczonego filtru"
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "Konfiguracja zaznaczonego filtru: %s"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+msgid "No Filter Selected"
+msgstr "Nie zaznaczono filtru"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+msgid "Configure Selected Filter"
+msgstr "Konfiguracja zaznaczonego filtru"
+
 #: app/widgets/gimpcoloreditor.c:244
 msgid "FG"
 msgstr "FG"
@@ -10078,36 +10119,6 @@ msgstr "GIMP (wersja rozwojowa)"
 
 #~ msgid "Error in GIMP pattern file '%s'."
 #~ msgstr "Błąd w pliku \"%s\" z deseniami programu GIMP."
-
-#~ msgid "Available Filters"
-#~ msgstr "Dostępne filtry"
-
-#~ msgid "Add the selected filter to the list of active filters."
-#~ msgstr "Dodaje zaznaczony filtr do listy aktywnych filtrów"
-
-#~ msgid "Remove the selected filter from the list of active filters."
-#~ msgstr "Usuwa zaznaczony filtr z listy aktywnych filtrów"
-
-#~ msgid "Move the selected filter up"
-#~ msgstr "Przesunięcie zaznaczonego filtru w górę"
-
-#~ msgid "Move the selected filter down"
-#~ msgstr "Przesunięcie zaznaczonego filtru w dół"
-
-#~ msgid "Active Filters"
-#~ msgstr "Aktywne filtry"
-
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "Przywraca domyślne ustawienia zaznaczonego filtru"
-
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "Konfiguracja zaznaczonego filtru: %s"
-
-#~ msgid "No Filter Selected"
-#~ msgstr "Nie zaznaczono filtru"
-
-#~ msgid "Configure Selected Filter"
-#~ msgstr "Konfiguracja zaznaczonego filtru"
 
 #~ msgid "Current:"
 #~ msgstr "Bieżący:"
