--- a/po/sr.po
+++ b/po/sr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-11-23 01:49+0100\n"
 "Last-Translator: Бранко Ивановић <popeye@one.ekof.bg.ac.yu>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@bogus.example.com>\n"
@@ -3214,7 +3214,7 @@ msgstr ""
 "\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 msgid "Determine File _Type:"
 msgstr "Одреди тип датотеке:"
 
@@ -8790,6 +8790,47 @@ msgstr ""
 "%s  Одузми\n"
 "%s%s%s  Пресек"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+msgid "Available Filters"
+msgstr "Доступни филтери"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+msgid "Add the selected filter to the list of active filters."
+msgstr "Додај изабрани филтер у листу активних филтера."
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+msgid "Remove the selected filter from the list of active filters."
+msgstr "Избаци изабрани филтер из листе активних филтера."
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+msgid "Move the selected filter up"
+msgstr "Помери изабрани филтер навише"
+
+#: app/widgets/gimpcolordisplayeditor.c:245
+msgid "Move the selected filter down"
+msgstr "Помери изабрани филтер наниже"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "Активни филтери"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+msgid "Reset the selected filter to default values"
+msgstr "Подеси изабрани филтер на подразумеване вредности"
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "Подеси изабрани филтер: %s"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+msgid "No Filter Selected"
+msgstr "Није изабран ниједан филтер"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+msgid "Configure Selected Filter"
+msgstr "Подеси Изабрани Филтер"
+
 #: app/widgets/gimpcoloreditor.c:244
 msgid "FG"
 msgstr "FG"
@@ -9753,36 +9794,6 @@ msgstr "Направи и уреди слике или фотографије"
 #: data/misc/gimp.desktop.in.in.h:2
 msgid "The GIMP (unstable)"
 msgstr "ГИМП (нестабилна верзија)"
-
-#~ msgid "Available Filters"
-#~ msgstr "Доступни филтери"
-
-#~ msgid "Add the selected filter to the list of active filters."
-#~ msgstr "Додај изабрани филтер у листу активних филтера."
-
-#~ msgid "Remove the selected filter from the list of active filters."
-#~ msgstr "Избаци изабрани филтер из листе активних филтера."
-
-#~ msgid "Move the selected filter up"
-#~ msgstr "Помери изабрани филтер навише"
-
-#~ msgid "Move the selected filter down"
-#~ msgstr "Помери изабрани филтер наниже"
-
-#~ msgid "Active Filters"
-#~ msgstr "Активни филтери"
-
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "Подеси изабрани филтер на подразумеване вредности"
-
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "Подеси изабрани филтер: %s"
-
-#~ msgid "No Filter Selected"
-#~ msgstr "Није изабран ниједан филтер"
-
-#~ msgid "Configure Selected Filter"
-#~ msgstr "Подеси Изабрани Филтер"
 
 #~ msgid "Error opening file '%s': %s"
 #~ msgstr "Грешка при отварању датотеке „%s“: %s"
