--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 02:46+0100\n"
+"POT-Creation-Date: 2003-11-24 14:58+0100\n"
 "PO-Revision-Date: 2003-11-23 01:49+0100\n"
 "Last-Translator: Branko Ivanović <popeye@one.ekof.bg.ac.yu>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@bogus.example.com>\n"
@@ -3217,7 +3217,7 @@ msgstr ""
 "\n"
 "%s"
 
-#: app/gui/file-dialog-utils.c:113
+#: app/gui/file-dialog-utils.c:112
 msgid "Determine File _Type:"
 msgstr "Odredi tip datoteke:"
 
@@ -8794,6 +8794,47 @@ msgstr ""
 "%s  Oduzmi\n"
 "%s%s%s  Presek"
 
+#: app/widgets/gimpcolordisplayeditor.c:178
+msgid "Available Filters"
+msgstr "Dostupni filteri"
+
+#: app/widgets/gimpcolordisplayeditor.c:205
+msgid "Add the selected filter to the list of active filters."
+msgstr "Dodaj izabrani filter u listu aktivnih filtera."
+
+#: app/widgets/gimpcolordisplayeditor.c:222
+msgid "Remove the selected filter from the list of active filters."
+msgstr "Izbaci izabrani filter iz liste aktivnih filtera."
+
+#: app/widgets/gimpcolordisplayeditor.c:236
+msgid "Move the selected filter up"
+msgstr "Pomeri izabrani filter naviše"
+
+#: app/widgets/gimpcolordisplayeditor.c:245
+msgid "Move the selected filter down"
+msgstr "Pomeri izabrani filter naniže"
+
+#: app/widgets/gimpcolordisplayeditor.c:290
+msgid "Active Filters"
+msgstr "Aktivni filteri"
+
+#: app/widgets/gimpcolordisplayeditor.c:324
+msgid "Reset the selected filter to default values"
+msgstr "Podesi izabrani filter na podrazumevane vrednosti"
+
+#: app/widgets/gimpcolordisplayeditor.c:545
+#, c-format
+msgid "Configure Selected Filter: %s"
+msgstr "Podesi izabrani filter: %s"
+
+#: app/widgets/gimpcolordisplayeditor.c:552
+msgid "No Filter Selected"
+msgstr "Nije izabran nijedan filter"
+
+#: app/widgets/gimpcolordisplayeditor.c:556
+msgid "Configure Selected Filter"
+msgstr "Podesi Izabrani Filter"
+
 #: app/widgets/gimpcoloreditor.c:244
 msgid "FG"
 msgstr "FG"
@@ -9757,36 +9798,6 @@ msgstr "Napravi i uredi slike ili fotografije"
 #: data/misc/gimp.desktop.in.in.h:2
 msgid "The GIMP (unstable)"
 msgstr "GIMP (nestabilna verzija)"
-
-#~ msgid "Available Filters"
-#~ msgstr "Dostupni filteri"
-
-#~ msgid "Add the selected filter to the list of active filters."
-#~ msgstr "Dodaj izabrani filter u listu aktivnih filtera."
-
-#~ msgid "Remove the selected filter from the list of active filters."
-#~ msgstr "Izbaci izabrani filter iz liste aktivnih filtera."
-
-#~ msgid "Move the selected filter up"
-#~ msgstr "Pomeri izabrani filter naviše"
-
-#~ msgid "Move the selected filter down"
-#~ msgstr "Pomeri izabrani filter naniže"
-
-#~ msgid "Active Filters"
-#~ msgstr "Aktivni filteri"
-
-#~ msgid "Reset the selected filter to default values"
-#~ msgstr "Podesi izabrani filter na podrazumevane vrednosti"
-
-#~ msgid "Configure Selected Filter: %s"
-#~ msgstr "Podesi izabrani filter: %s"
-
-#~ msgid "No Filter Selected"
-#~ msgstr "Nije izabran nijedan filter"
-
-#~ msgid "Configure Selected Filter"
-#~ msgstr "Podesi Izabrani Filter"
 
 #~ msgid "Error opening file '%s': %s"
 #~ msgstr "Greška pri otvaranju datoteke „%s“: %s"
